fix layout issues

--- a/src/app/application/_dialoges/create-meal/create-meal.component.sass
+++ b/src/app/application/_dialoges/create-meal/create-meal.component.sass
@@ -6,5 +6,5 @@
   grid-template-areas: "header" "body" "buttons"
 
 .custom-mat-buttons
-  grid-template-columns: auto 120px 175px
+  grid-template-columns: auto 140px 200px
 
