--- a/src/app/application/_dialoges/import/import.component.sass
+++ b/src/app/application/_dialoges/import/import.component.sass
@@ -6,7 +6,7 @@
   grid-template-areas: "header" "body" "buttons"
 
 .custom-mat-buttons
-    grid-template-columns: auto 120px 160px
+    grid-template-columns: auto 140px 180px
 
 .source
   margin-top: 25px
